<resources>
    <string name="app_name">MangaMaster</string>
    <string name="content_provider_authority">com.dgsd.android.mangamaster</string>
    <string name="unknown_error">Unknown error</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="all">All</string>
    <string name="latest">Latest</string>
    <string name="favourites">Favourites</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="i_dont_want_to_sign_in">I dont want to sign in…</string>
    <string name="sign_in_with_email">Sign in with Username/Email</string>
    <string name="search">Search</string>
    <string name="author">Author</string>
    <string name="year_of_release">Year of Release</string>
    <string name="summary">Summary</string>
    <string name="artist">Artist</string>
    <string name="genres">Genres</string>
    <string name="all_series">All Series</string>
    <string name="my_manga">My Manga</string>
    <string name="series">Series</string>
    <string name="downloads">Downloads</string>
    <string name="latest_manga">Latest Manga</string>
    <string name="all_manga">All Manga</string>
    <string name="favourite_manga">Favourite Manga</string>
</resources>
