<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app_drawer">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:animateLayoutChanges="true">

            <TextView
                    android:id="@+id/series"
                    android:text="@string/series"
                    style="@style/AppDrawer.Title"/>

            <TextView
                    android:id="@+id/latest"
                    android:text="@string/latest"
                    style="@style/AppDrawer.ListItem"/>

            <TextView
                    android:id="@+id/all_series"
                    android:text="@string/all_series"
                    style="@style/AppDrawer.ListItem"/>


            <TextView
                    android:id="@+id/my_manga"
                    android:text="@string/my_manga"
                    style="@style/AppDrawer.Title"/>

            <TextView
                    android:id="@+id/favourites"
                    android:text="@string/favourites"
                    style="@style/AppDrawer.ListItem"/>

            <TextView
                    android:id="@+id/downloads"
                    android:text="@string/downloads"
                    style="@style/AppDrawer.ListItem"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>