<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_holo_light">

    <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="vertical">

            <com.dgsd.android.mangamaster.view.UrlImageView
                    android:id="@+id/cover_image_large"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/series_panel_image_height"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding"
                    android:animateLayoutChanges="true">

                <TextView
                        android:id="@+id/author_title"
                        android:text="@string/author"
                        style="@style/SmallTitleTextViewStyle"/>

                <TextView
                        android:id="@+id/author"
                        style="@style/SeriesInfoText"/>

                <TextView
                        android:id="@+id/artist_title"
                        android:text="@string/artist"
                        style="@style/SmallTitleTextViewStyle"/>

                <TextView
                        android:id="@+id/artist"
                        style="@style/SeriesInfoText"/>

                <TextView
                        android:id="@+id/release_year_title"
                        android:text="@string/year_of_release"
                        style="@style/SmallTitleTextViewStyle"/>

                <TextView
                        android:id="@+id/release_year"
                        style="@style/SeriesInfoText"/>

                <TextView
                        android:id="@+id/genres_title"
                        android:text="@string/genres"
                        style="@style/SmallTitleTextViewStyle"/>

                <TextView
                        android:id="@+id/genres"
                        style="@style/SeriesInfoText"/>

                <TextView
                        android:id="@+id/summary_title"
                        android:text="@string/summary"
                        style="@style/SmallTitleTextViewStyle"/>

                <TextView
                        android:id="@+id/summary"
                        style="@style/SeriesInfoText"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
            android:id="@+id/drag_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/series_panel_height"
            android:background="@drawable/background_holo_light">

        <com.dgsd.android.mangamaster.view.UrlImageView
                android:id="@+id/cover_image_small"
                android:layout_width="@dimen/series_panel_height"
                android:layout_height="@dimen/series_panel_height"
                android:layout_alignParentLeft="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/cover_image_small"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/title_small"
                    style="@style/SeriesInfoText"/>

            <TextView
                    android:id="@+id/latest_update"
                    android:textSize="15sp"
                    style="@style/SeriesInfoText"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>